<resources>
    <string name="app_name">Pertemuan5</string>
    <string name="title_home_screen">Kalkulator Bangun Datar</string>
    <string name="text1">Silahkan Pilih Bangun Datar Yang Ingin Di Hitung</string>
    <string name="persegi">Persegi</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="segitiga">Segitiga</string>
    <string name="balok">Balok</string>
    <string name="perhitungan_persegi">Perhitungan Persegi</string>
    <string name="perhitungan_segitiga">Perhitungan Segitiga</string>
    <string name="perhitungan_balok">Perhitungan Balok</string>
    <string name="silahkan_masukan_angka_yang_sesuai_dengan_variabelnya">Silahkan Masukan Angka Yang Sesuai Dengan Variabelnya</string>
    <string name="sisi">Sisi</string>
    <string name="hitung">Hitung</string>
    <string name="jari_jari">Jari - Jari</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="sisisegitiga">Sisi</string>
    <string name="luas_persegi">Luas Persegi :</string>
    <string name="hasil_luas_persegi">Hasil Luas Persegi</string>
    <string name="keliling_persegi">Keliling Persegi :</string>
    <string name="hasil_keliling_persegi">Hasil Keliling Persegi</string>
    <string name="hasil_keliling_segitiga">Hasil Keliling Segitiga</string>
    <string name="keliling_segitiga">Keliling Segitiga :</string>
    <string name="hasil_luas_segitiga">Hasil Luas Segitiga</string>
    <string name="luas_segitiga">Luas Segitiga :</string>
    <string name="hasil_luas_balok">Hasil Luas Balok</string>
    <string name="luas_balok">Luas Balok :</string>
    <string name="hasil_keliling_lingkaran">Hasil Keliling Lingkaran</string>
    <string name="keliling_lingkaran">Keliling Lingkaran :</string>
    <string name="hasil_luas_lingkaran">Hasil Luas Lingkaran</string>
    <string name="luas_lingkaran">Luas Lingkaran :</string>
    <string name="lebar">Lebar</string>
    <string name="panjang">Panjang</string>
    <string name="tinggi_balok">Tinggi</string>
    <string name="keliling_balok">Keliling Balok :</string>
    <string name="hapus">Hapus</string>
    <string name="perhitungan_lingkaran">Perhitungan Lingkaran</string>
</resources>