<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5B97C5"
    android:orientation="vertical"
    tools:context=".KalkulasiLingkaran">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/appbar_lingkaran"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silahkan_masukan_angka_yang_sesuai_dengan_variabelnya"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="@dimen/_20sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jari_jari"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/_30sdp"/>

            <EditText
                android:id="@+id/jr_jr_lngkrn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:paddingStart="@dimen/_10sdp"
                android:inputType="numberDecimal|numberSigned|number"
                android:background="@drawable/editext_bg"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/hitung_lngkrn"
                    android:layout_width="@dimen/_98sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/hitung_bg"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/hitung"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:stateListAnimator="@null"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clear_text_lngkrn"
                    android:layout_width="@dimen/_98sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/clear_bg"
                    android:text="@string/hapus"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:stateListAnimator="@null"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luas_lingkaran"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/hsl_ls_lingkaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#FAF500"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keliling_lingkaran"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/hsl_kl_lingkaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#FAF500"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>