<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#018596"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/appbar_home"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/persegi_btn"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="131dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_persegi_ic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/persegi"
                        android:textSize="@dimen/_16ssp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/lingkaran_btn"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="131dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lingkaran_ic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/lingkaran"
                        android:textSize="@dimen/_16ssp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/segitiga_btn"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="131dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_segitiga_ic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/segitiga"
                        android:textSize="@dimen/_16ssp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/balok_btn"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="131dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/balok_ic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/balok"
                        android:textSize="@dimen/_16ssp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>